# odilia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE2.0.txt  LICENSE-MIT  LICENSE-MIT.txt  README.md  TODO  build.rs  clippy.toml  config.toml  deny.toml  flake.nix  license.patch  rust-toolchain.toml  rustfmt.toml  setup-permissions.sh  shell.nix  testing.sh
.github/workflows/: ci.yml  main.yml  test.yml
atspi/: Cargo.toml  README.md
atspi/src/: accessible.rs  accessible_ext.rs  accessible_plus.rs  action.rs  application.rs  bus.rs  cache.rs  collection.rs  component.rs  connection.rs  convertable.rs  device_event_controller.rs  device_event_listener.rs  document.rs  editable_text.rs  helpers.rs  hyperlink.rs  hyperlink_plus.rs  hypertext.rs  image.rs  interfaces.rs  lib.rs  processed.rs  registry.rs  selection.rs  socket.rs  state.rs  table.rs  table_cell.rs  text.rs  value.rs
atspi/src/events/: document.rs  focus.rs  keyboard.rs  mod.rs  mouse.rs  object.rs  terminal.rs  window.rs
atspi/xml/: Accessible.xml  Action.xml  Application.xml  Cache.xml  Component.xml  DeviceEventController.xml  DeviceEventListener.xml  Event.xml  Processed.xml  TableCell.xml
cache/: Cargo.toml  README.md  \
cache/benches/: load_test.rs  wcag_cache_items.json  zbus_docs_cache_items.json
cache/examples/: gen_json.rs
cache/src/: accessible_ext.rs  cache_item.rs  cache_item_ext.rs  cache_ref.rs  convertable.rs  event_handlers.rs  lib.rs  relation_set.rs  role_set.rs  types.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  test.wai  types.rs
common/: Cargo.toml  README.md
common/src/: cache.rs  command.rs  commands.rs  elements.rs  errors.rs  events.rs  from_state.rs  input.rs  lib.rs  modes.rs  result.rs  state.rs  traits.rs  types.rs  views.rs
common/src/settings/: input.rs  invalid-config.toml  log.rs  mod.rs  speech.rs
input/: Cargo.toml  README.md
input-server/: Cargo.toml  README.md  TODO
input-server-keyboard/: Cargo.toml  README.md
input-server-keyboard/proptest-regressions/: proptests.txt
input-server-keyboard/src/: lib.rs  proptests.rs  proxy.rs  tests.rs
input-server-keyboard/tests/: test_key_capture.rs
input-server/src/: lib.rs  main.rs  proptests.rs  proxy.rs  tests.rs
input/examples/: basic_key_capture.rs  generate-json.rs  rdev_key_capture.rs  translated_key_capture.rs
input/src/: device.rs  events.rs  keybinds.rs  lib.rs
odilia/: Cargo.toml  config.toml
odilia-notify/: Cargo.toml  README.md
odilia-notify/src/: action.rs  error.rs  lib.rs  notification.rs  urgency.rs
odilia-notify/tests/: receive_notifications.rs  recieve_notifications.rs
odilia-tower/: Cargo.toml  README.md
odilia-tower/src/: README.md  async_try.rs  cache_event.rs  choice.rs  error.rs  from_state.rs  handler.rs  handlers.rs  iter_svc.rs  lib.rs  service_ext.rs  service_set.rs  state_changed.rs  state_svc.rs  sync_try.rs  unwrap_svc.rs
odilia/src/: cache.rs  cli.rs  commands.rs  logging.rs  macros.rs  main.rs  signal.rs  state.rs  tower.rs  traits.rs
odilia/src/events/: cache.rs  document.rs  mod.rs  object.rs
odilia/src/events/cache/: add_accessible.rs  mod.rs  remove_accessible.rs
odilia/src/events/objects/: children_changed.rs  mod.rs  state_changed.rs  text_caret_moved.rs  text_changed.rs
odilia/src/handlers/: atspi.rs  commands.rs  input.rs  mod.rs  signal.rs
odilia/src/tower/: async_try.rs  cache.rs  cache_event.rs  choice.rs  description.rs  event_property.rs  from_state.rs  handler.rs  handlers.rs  iter_svc.rs  macros.rs  mod.rs  name.rs  predicate.rs  relation_set.rs  serial_fut.rs  service_ext.rs  service_set.rs  state_changed.rs  state_svc.rs  sync_try.rs  tower.rs  unwrap_svc.rs
odilia/src/tower/extractors/: cache_event.rs  children.rs  description.rs  event_property.rs  mod.rs  name.rs  relation_set.rs  subtree.rs
podman/: aarch64-unknown-linux-gnu.Containerfile  aarch64-unknown-linux-musl.Containerfile  install-deps.sh  test-wrapper.sh  x86_64-unknown-linux-gnu.Containerfile  x86_64-unknown-linux-musl.Containerfile
scripts/: debug_start_sohkd.sh  get_a11y_bus.sh  get_a11y_bus_address.sh  install_configs.sh  number_of_dependencies_total.sh  odilia  save_sohkd_configs.sh  sniff_a11y_bus.sh  start_sohkd.sh  tokio_console_run.sh
sohkd/: Cargo.toml  arrow-granularities.conf  common-keys.conf  sohkdrc  stop-speech.conf
sohkd/src/: config.rs  main.rs  main.rs.orig  perms.rs  tests.rs  uinput.rs
src/: action.rs  args.rs  lib.rs  logging.rs  main.rs  notification.rs  state.rs  structural.rs
src/events/: mod.rs  object.rs
tests/: receive_notifications.rs  recieve_notifications.rs
tower-iter/: Cargo.toml
tower-iter/src/: call_iter.rs  choice.rs  error.rs  future_ext.rs  iter_svc.rs  lib.rs  service_multi_iter.rs  service_multiset.rs  service_set.rs
tts/: Cargo.toml  README.md
tts/src/: lib.rs
xml/: app.odilia.Controller.xml
