[workspace]
resolver="2"
default-members = ["odilia", "odilia-notify"]
members = [
  "cache",
  "common",
  "input", "input-server-keyboard",
  "odilia",
  "odilia-notify", "odilia-tower", "tower-iter",
]

[profile.release]
lto = true
codegen-units = 1 # Reduce codegen units for better optimizations (from swhkd)

[workspace.metadata.release]
allow-branch = ["main"]
# By default, crates will not be released or published
# These are overridden on a crate-by-crate basis
release = false
publish = false
shared-version = true
consolidate-commits = true
consolidate-pushes = true
pre-release-commit-message = "Release Odilia version {{version}}"
post-release-commit-message = "Post release version bump: version {{next_version}}"
tag-message = "{{crate_name}} version {{version}}"
dev-version-ext = "dev"
dev-version = true
pre-release-hook = ["cargo", "fmt"]
dependent-version = "upgrade"

[workspace.dependencies]
atspi = { version = "0.26.3", default-features = false, features = ["tokio"] }
atspi-proxies = { version = "0.10.2", default-features = false, features = ["tokio"] }
atspi-common = { version = "0.10.1", default-features = false, features = ["tokio"] }
atspi-connection = { version = "0.10.2", default-features = false, features = ["tokio"] }
futures-concurrency = { version = "7.6.1", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
odilia-common = { version = "0.3.0", path = "./common", features = ["tokio"] }
odilia-cache = { version = "0.3.0", path = "./cache" }
nix = { version = "0.30.0", default-features = false, features = ["user"] }
pin-project = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "^1.22.0", default-features = false, features = ["sync", "macros", "rt", "signal", "tracing"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["rt"] }
tower = { version = "0.5.2", features = ["util", "filter"] }
tracing = { version = "^0.1.37", default-features = false }
tracing-log = { version = "^0.1.3", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false }
tracing-error = "^0.2.0"
tracing-tree = "^0.4.0"
zbus = { version = "5.1", default-features = false, features = ["tokio"] }
serde_plain = "1.0.1"
ssip = { version = "0.4", default-features = false }
ssip-client-async = { version = "0.16.0", default-features = false, features = ["tokio"] }

xdg = { version = "2.5.2", default-features = false }
