[package]
name = "atspi"
version = "0.0.1"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>"]
description = "Bindings to the Assistive Technology Service Provider Interface over dbus"
license = "gpl-3" # Not gpl-3-or-later
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["screen-reader", "accessibility", "a11y", "tts", "linux"]
categories = ["accessibility", "api-bindings"]
edition = "2021"

[package.metadata.release]
release = true
publish = true

[features]
default = ["async-io"]
async-io = ["zbus/async-io"]
gvariant = ["zbus/gvariant"]
tokio = ["zbus/tokio"]

[dependencies]
async-recursion = "^1.0.0"
async-trait = "^0.1.56"
futures = { version = "0.3.21", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.32"
zbus = { version = "3.0.0", default-features = false }
