[package]
name = "odilia-cache"
version = "0.3.0"
edition = "2021"
authors = ["Tait Hoyem <tait@tait.tech>", "Sam Tay <samctay@pm.me>"]
description = "A caching layer for the Odilia screen reader."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["screen-reader", "accessibility", "a11y", "cache", "linux"]
categories = ["accessibility"]

[dependencies]
atspi.workspace = true
atspi-proxies.workspace = true
atspi-common.workspace = true
odilia-common = { workspace = true, features = ["async-io"] }
dashmap = { version = "7.0.0-rc2", features = ["serde"] }
serde.workspace = true
tracing.workspace = true
zbus.workspace = true
fxhash = "0.2.1"
serde_plain.workspace = true
indextree = { version = "4.7.4", features = ["rayon", "par_iter", "serde", "deser"] }
parking_lot = { version = "0.12.3", default-features = false }
itertools = "0.14.0"
futures-concurrency.workspace = true
futures-lite = { version = "2.6.0", default-features = false }

[dev-dependencies]
atspi = { workspace = true, features = ["connection"] }
criterion = { version = "0.6.0", features = ["async_smol", "html_reports"] }
futures-util = { workspace = true, features = ["alloc"] }
serde_json.workspace = true

[[bench]]
name = "load_test"
harness = false
