[package]
name = "odilia-cache"
version = "0.3.0"
edition = "2021"
authors = ["Tait Hoyem <tait@tait.tech>", "Sam Tay <samctay@pm.me>"]
description = "A caching layer for the Odilia screen reader."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["screen-reader", "accessibility", "a11y", "cache", "linux"]
categories = ["accessibility"]

[dependencies]
atspi.workspace = true
odilia-common.workspace = true
serde.workspace = true
tracing.workspace = true
zbus.workspace = true
fxhash = "0.2.1"
serde_plain.workspace = true
futures-concurrency.workspace = true
futures-lite.workspace = true
async-channel.workspace = true
smol-cancellation-token.workspace = true
futures-util.workspace = true
static_assertions = "1.1.0"

[dev-dependencies]
atspi = { workspace = true, features = ["connection"] }
criterion = { version = "0.6.0", features = ["async_smol", "html_reports"] }
smol = "2.0"
futures-util = { workspace = true, features = ["alloc"] }
serde_json.workspace = true
tokio.workspace = true

[[bench]]
name = "load_test"
harness = false
