[package]
name = "odilia-common"
version = "0.3.0"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>"]
description = "Common algorithms and data structures shared by multiple Odilia screen reader crates."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["screen-reader", "accessibility", "a11y", "data-structures", "linux"]
categories = ["accessibility"]
edition = "2021"

[features]
default = []
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]

[dependencies]
atspi.workspace = true
atspi-common.workspace = true
atspi-proxies.workspace = true
bitflags = "2"
futures.workspace = true
futures-concurrency.workspace = true
serde.workspace = true
thiserror.workspace = true
zbus.workspace = true
serde_plain.workspace = true
figment = "0.10.15"
enum_dispatch = "0.3.13"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
ssip = { workspace = true, features = ["dbus"] }
xdg.workspace = true
zbus-lockstep = { version = "0.5" }
zbus-lockstep-macros = { version = "0.5" }
zvariant = "5.4.0"
