[package]
name = "odilia-common"
version = "0.3.0"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>"]
description = "Common algorithms and data structures shared by multiple Odilia screen reader crates."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["screen-reader", "accessibility", "a11y", "data-structures", "linux"]
categories = ["accessibility"]
edition = "2021"

[features]
default = []
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]

[dependencies]
atspi.workspace = true
atspi-common.workspace = true
atspi-proxies.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
serde.workspace = true
thiserror.workspace = true
zbus.workspace = true
serde_plain.workspace = true
figment = "0.10.15"
enum_dispatch = "0.3.13"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
ssip = { workspace = true, features = ["dbus"] }
xdg.workspace = true
zvariant = "5.4.0"
indextree = { version = "4.7.4", default-features = false }
