[package]
name = "odilia-common"
version = "0.3.0"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>"]
description = "Common algorithms and data structures shared by multiple Odilia screen reader crates."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["screen-reader", "accessibility", "a11y", "data-structures", "linux"]
categories = ["accessibility"]
edition = "2021"

[features]
default = []
tracing = ["dep:tracing"]
async-io = ["dep:async-channel"]
tokio = ["tokio/sync"]

[dependencies]
atspi.workspace = true
futures-concurrency.workspace = true
futures-util.workspace = true
serde.workspace = true
config.workspace = true
thiserror.workspace = true
zbus.workspace = true
serde_plain.workspace = true
enum_dispatch = "0.3.13"
lexopt.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true, features = ["attributes"] }
ssip = { workspace = true, default-features = false, features = ["serde"] }
ssip-client-async.workspace = true
indextree = { version = "4.7.4", default-features = false }
async-channel = { workspace = true, optional = true }
either = { version = "1.15.0", default-features = false }
