[package]
name = "input-server-keyboard"
version = "0.1.0"
edition = "2021"

[features]
default = []
proptest = []

[dependencies]
nix.workspace = true
odilia-common.workspace = true
rdev = { version = "0.5.0", features = ["unstable_grab"], git = "https://github.com/TTWNO/rdev2/", branch = "odilia-keys-v2" }
serde_json.workspace = true
tracing.workspace = true
zbus.workspace = true

[dev-dependencies]
atspi-common.workspace = true
proptest = "1.6.0"
