[package]
name = "input-server"
version = "0.1.0"
edition = "2021"
description = "An input server for the Odilia screen reader."
license = "MIT OR Apache-2.0"
repository = "https://github.com/odilia-app/odilia/"
readme = "README.md"
keywords = ["keybaord"]
categories = ["daemon", "odilia"]

[features]
default = []
proptest = []

[dependencies]
nix.workspace = true
odilia-common.workspace = true
rdev = { git = "https://github.com/TTWNO/rdev2/", branch = "odilia-keys-v2", features = ["unstable_grab"] }
serde_json.workspace = true
tracing.workspace = true
zbus.workspace = true

[dev-dependencies]
atspi-common.workspace = true
proptest = "1.6.0"
