[package]
name = "input-server"
version = "0.1.0"
edition = "2021"
description = "An input server for the Odilia screen reader."
license = "MIT OR Apache-2.0"
repository = "https://github.com/odilia-app/odilia/"
readme = "README.md"
keywords = ["keybaord"]
categories = ["daemon", "odilia"]

[dependencies]
input-server-keyboard = { version = "0.1.0", path = "../input-server-keyboard/" }
rdev = { version = "0.5.0", features = ["unstable_grab"], git = "https://github.com/TTWNO/rdev2", branch = "odilia-keys-v2" }
odilia-common.workspace = true
nix.workspace = true
serde_json.workspace = true
tracing.workspace = true
zbus.workspace = true
zbus-lockstep = "0.5.0"

