[package]
name = "odilia-input"
version = "0.0.3"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>"]
description = "Input subsystem for the Odilia screen reader."
license = "GPL-3.0-only" # Not gpl-3-or-later
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["accessibility", "a11y", "input", "api", "linux"]
categories = ["accessibility"]
edition = "2021"

[dependencies]
eyre.workspace = true
lazy_static = "1.4.0"
nix.workspace = true
odilia-common.workspace = true
once_cell = "1.16.0"
serde_json.workspace = true
sysinfo = { version = "0.26.8", default-features = false }
tokio.workspace = true
tokio-util.workspace=true
tracing.workspace = true
