[package]
name = "odilia-notify"
version = "0.1.0"
authors=["albertotirla<albertotirla@gmail.com>"]
description="a library which facilitates capturing notifications from applications"
license = "GPL-3.0-only" # Not gpl-3-or-later
readme = "README.md"
repository="https://github.com/albertotirla/odilia-notify"
keywords=["tooling", "accessibility", "linux", "dbus"]
categories=["utils"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace=true
itertools = "0.12.1"
serde.workspace=true
serde_repr = "0.1.18"
thiserror = "1.0.56"
tokio.workspace=true
tracing.workspace=true
zbus.workspace=true
[dev-dependencies]
notify-rust = "4.10.0"
