[package]
name = "odilia-notify"
version = "0.1.0"
authors=["albertotirla<albertotirla@gmail.com>"]
description="a library which facilitates capturing notifications from applications"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository="https://github.com/albertotirla/odilia-notify"
keywords=["tooling", "accessibility", "linux", "dbus"]
categories=["utils"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite.workspace=true
serde.workspace=true
tracing.workspace=true
zbus.workspace=true
odilia-common.workspace=true
[dev-dependencies]
notify-rust = "4.11.7"
tracing-subscriber = { workspace = true, features = ["fmt"] }
tokio = { workspace=true, features = ["time"] }
