[package]
name = "odilia-tower"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An integration layer for the Odilia screen reader and the Tower ecosystem."
repository = "https://github.com/odilia-app/odilia/"
categories = ["tower"]
keywords = ["accessibility", "tower"]
readme = "README.md"

[dependencies]
futures-util.workspace = true
odilia-common.workspace = true
pin-project-lite.workspace = true 
static_assertions = "1.1.0"
tower = { workspace = true, features = ["util"] }

[dev-dependencies]
assert_matches = "1.5.0"
async-io.workspace = true
ssip.workspace = true
futures-lite.workspace = true
