[package]
name = "odilia"
version = "0.1.4"
authors = [
  "Michael Connor Buchan <mikey@blindcomputing.org>",
  "Tait Hoyem <tait@tait.tech>",
  "Alberto Tirla <albertotirla@gmail.com>",
]
description = "Building a better screen reader for the Linux desktop, one step at a time."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["screen-reader", "accessibility", "a11y", "tts", "linux"]
categories = ["accessibility"]
edition = "2021"
rust-version = "1.81"
publish = true

[package.metadata.release]
# The root crate should be released
release = true
# Update the CHANGELOG
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
  { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/odilia-app/odilia/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]
atspi.workspace = true
circular-queue = "^0.2.6"
odilia-common = { workspace = true, features = ["tracing"] }
odilia-cache.workspace = true
odilia-input = { path = "../input", version = "0.3.0" }
odilia-tts = { path = "../tts", version = "0.1.4" }
odilia-tower = { path = "../odilia-tower/", version = "0.1.0" }
ssip-client-async.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
xdg.workspace=true
zbus.workspace = true
odilia-notify = { version = "0.1.0", path = "../odilia-notify" }
tracing-journald = "0.3.0"
ssip.workspace = true
tower-iter = { version = "0.1", path = "../tower-iter/" }
config.workspace = true
smol-cancellation-token.workspace = true
lexopt.workspace = true
async-signal = "0.2.11"
futures-lite.workspace = true
async-channel.workspace = true
futures-concurrency.workspace = true
futures-util.workspace = true
async-executor = { version = "1.13.2", features = ["static"] }
pin-project-lite.workspace = true
blocking = "1.6.1"
