[package]
description = "Swhkd clone for Odilia"
edition = "2021"
name = "sohkd"
version = "1.2.1"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n",
  "Tait Hoyem <tait@tait.tech>\n"
]

[dependencies]
clap.workspace = true
env_logger = "0.9.3"
evdev = { version = "0.12.0", features = ["tokio"] }
itertools = "0.10.5"
log = "0.4.17"
nix.workspace = true
odilia-common = { path = "../common" }
serde_json.workspace = true
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sysinfo.workspace = true
tokio-stream = "0.1.11"
tokio.workspace = true
