[package]
name = "tower-iter"
version = "0.1.0"
edition = "2021"
description = "Fully-named Tower services for dealing with iterators (of services or requests)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/odilia-app/odilia/"
keywords = ["tower"]
categories = ["tower"]

[dependencies]
futures-util.workspace = true
pin-project-lite.workspace = true
tower = { workspace = true, features = ["util"] }

[features]

[dev-dependencies]
futures-lite.workspace = true
