[package]
name = "odilia-tts"
version = "0.1.4"
authors = ["Tait Hoyem <tait@tait.tech>"]
description = "A pure-Rust, fully-safe, asyncronous speech dispatcher client."
license = "MIT OR Apache-2.0"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["accessibility", "tts", "speech-dispatcher", "linux", "async"]
categories = ["accessibility", "api-bindings"]
edition = "2021"

[dependencies]
ssip-client-async.workspace = true
tokio.workspace = true
tokio-util.workspace=true
tracing.workspace = true
eyre.workspace = true
ssip.workspace = true
