[package]
name = "odilia-tts"
version = "0.1.4"
authors = ["Tait Hoyem <tait@tait.tech>"]
description = "A pure-Rust, fully-safe, asyncronous speech dispatcher client."
license = "MIT OR Apache-2.0"
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["accessibility", "tts", "speech-dispatcher", "linux", "async"]
categories = ["accessibility", "api-bindings"]
edition = "2021"

[dependencies]
ssip-client-async.workspace = true
tracing.workspace = true
odilia-common.workspace = true
smol-cancellation-token.workspace = true
async-channel = { version = "2.3.1", default-features = false }
futures.workspace = true
futures-lite = "2.6.0"
async-io = "2.4.1"
async-net = "2.0.0"
async-fs = "2.1.2"
